[add]: categories methods
